[viewport] Test that, when an overlay hides root scroll bars, background elements with { position: sticky } remain in their "stuck" position (issue #711)

--- a/spec/specs.sass
+++ b/spec/specs.sass
@@ -4,7 +4,7 @@ body
   // We have a lot of specs that measure the distance of elements
   // from the screen edge, so we can't have the Jasmine runner to have
   // any margins on the body.
-  margin-top: 0
+  margin: 0
 
 // Reduce the backdrop flashing during modal specs
 up-modal-backdrop,
